--- a/bibliography.bib
+++ b/bibliography.bib
@@ -67,6 +67,14 @@ imóveis da União ou de seu interesse.},
   publisher = {Chapman & Hall},
   year = {2017}
 }
+@book{wasserman,
+ author = {Wasserman, Larry},
+ title = {All of Statistics: A Concise Course in Statistical Inference},
+ year = {2010},
+ isbn = {1441923225, 9781441923226},
+ publisher = {Springer Publishing Company, Incorporated},
+} 
+
 @Inproceedings{giannakos,
  Address = {Florianópolis},
  Author = {ISABELA BECK DA SILVA GIANNAKOS and MANOEL LUIZ LEÃO},
@@ -250,6 +258,14 @@ year = "2016"
 @book{polock,
   author = {D. Stephen G. Pollock},
   title = {Lectures on Econometrics},
-  url = {https://www.le.ac.uk/users/dsgp1/COURSES/THIRDMET/MYLECTURES/1REGRESS.pdf},
-  
+  url = {https://www.le.ac.uk/users/dsgp1/COURSES/THIRDMET/MYLECTURES/1REGRESS.pdf}
+}
+@article{limpert,
+  author = {LIMPERT, ECKHARD and A. STAHEL, WERNER and ABBT, MARKUS},
+  year = {2001},
+  month = {05},
+  pages = {341-},
+  title = {Log-Normal Distributions Across the Sciences: Keys and Clues},
+  volume = {51},
+  booktitle = {BioScience}
 }
