--- a/bibliography.bib
+++ b/bibliography.bib
@@ -264,8 +264,36 @@ year = "2016"
   author = {LIMPERT, ECKHARD and A. STAHEL, WERNER and ABBT, MARKUS},
   year = {2001},
   month = {05},
-  pages = {341-},
+  pages = {341-352},
   title = {Log-Normal Distributions Across the Sciences: Keys and Clues},
   volume = {51},
   booktitle = {BioScience}
+}
+@Inproceedings{dist_lognormal,
+  address = {Florianópolis},
+  author = {Luiz Fernando Palin Droubi and Willian Zonato and Norberto Hochheim},
+  title = {Distribuição {L}ognormal},
+  crossref = {cobrac},
+  subtitle = {Propriedades e Aplicações na Engenharia de Avaliações},
+  publisher = {COBRAC},
+  month = {out},
+  year = {2018},
+  url = {http://droubi.me/cobrac2018}
+} 
+@inproceedings{pressupostos_classicos,
+  author = {Willian Zonato and Luiz Fernando Palin Droubi and Norberto Hochheim},
+  title = {Pressupostos clássicos dos modelos de regressão linear e suas implicações
+  sobre as avaliações em massa},
+  crossref = {cobrac},
+  publisher = {COBRAC},
+  month = {out},
+  year = {2018},
+  url = {http://droubi.me/cobrac2018}
+} 
+@proceedings{cobrac,
+  title = {13º {C}ongresso {B}rasileiro de {C}adastro {T}écnico {M}ultifinalitário e {G}estão {T}erritorial},
+  shorttitle = {XIII COBRAC},
+  eventdate = {2018},
+  venue = {Florianópolis, SC},
+  date = {2018},
 }
